cluster/apps/default/rhv/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: rhv-service
  namespace: default
spec:
  ports:
    - protocol: TCP
      port: 8080
