cluster/apps/default/rhv/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rhv-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    external-dns.alpha.kubernetes.io/target: ipv4.${SECRET_DOMAIN}
    external-dns/is-public: "true"
    hajimari.io/appName: RedHat Virtualization
    hajimari.io/enable: "true"
    hajimari.io/icon: server
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  rules:
    - host: rhv.${SECRET_DOMAIN}
      http:
        paths:
          - backend:
              service:
                name: rhv-service
                port:
                  number: 8080
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - rhv.${SECRET_DOMAIN}
      secretName: rhv-tls
